--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script type="text/javascript" src="script.js"></script>
   <link rel="stylesheet" type="text/css" href="calculator.css">
 
-  <title>My Calculator</title>
+  <title>My Calculator2</title>
 </head>
 
 <body>
