--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
 <body>
 
-  <div class="calculator">
+  <div class="calculator this">
     <div class="mainbody">
       <div class="display-container">
         <div class="dis-top">
         </div>
         <input type='text' placeholder='0' name='bgNumber' class="dis-bg" id="display1">
-
+  
         <input type='text' name='smNumber' class="dis-sm" id="display2">
 
       </div>
